add some annotations

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,9 @@
         <lombok.version>RELEASE</lombok.version>
         <postgresql.version>42.0.0</postgresql.version>
         <slf4j.version>1.7.28</slf4j.version>
-        <spring.core.version>5.2.12.RELEASE</spring.core.version>
+        <spring.version>5.2.12.RELEASE</spring.version>
         <org.hibernate.version>5.4.32.Final</org.hibernate.version>
+        <h2.version>1.4.200</h2.version>
     </properties>
 
     <dependencies>
@@ -27,8 +28,23 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>${spring.core.version}</version>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -40,6 +56,12 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>${org.hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
