--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,23 @@
         <lombok.version>RELEASE</lombok.version>
         <postgresql.version>42.2.18</postgresql.version>
         <slf4j.version>1.7.28</slf4j.version>
-        <spring.version>5.2.12.RELEASE</spring.version>
+        <spring.version>5.2.1.RELEASE</spring.version>
         <org.hibernate.version>5.4.32.Final</org.hibernate.version>
         <h2.version>1.4.200</h2.version>
+        <c3p0.version>5.3.6.Final</c3p0.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-c3p0</artifactId>
+            <version>${c3p0.version}</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
